--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "minesweeper"]
-	path = minesweeper
-	url = https://github.com/ziebelje/minesweeper
+	path = public/minesweeper
+	url = https://github.com/Amileni/minesweeper
